General: Changes to copy. plan-details.jsp: Remove "back to top" button. Fixed tooltips for "More than 3 years" table. customer-service-centre.jsp: Remove body content of access code has been used pop up. O2O-landing.jsp: Fixed disclaimer alignment and hid infographic for mobile. confirmation-offline.jsp: Combine desktop and mobile title into one.

--- a/src/main/webapp/resources/css/savie/styles.css
+++ b/src/main/webapp/resources/css/savie/styles.css
@@ -14715,7 +14715,7 @@ input[type=number] {
     right: 4%;
     max-width: 450px;
     width: 35%;
-    top: 425px;
+    top: 285px;
     position: absolute;
     padding-left: 65px;
     padding-right: 65px;
@@ -14733,6 +14733,21 @@ input[type=number] {
     margin-bottom: 20px;
     border: none;
     max-width: none;
+  }
+}
+@media (min-width: 1120px) {
+  .fwd-savie-wrapper .sign-up-teaser {
+    top: 325px;
+  }
+}
+@media (min-width: 1200px) {
+  .fwd-savie-wrapper .sign-up-teaser {
+    top: 380px;
+  }
+}
+@media (min-width: 1480px) {
+  .fwd-savie-wrapper .sign-up-teaser {
+    top: 485px;
   }
 }
 @media (min-width: 1200px) {
